fix navbar spacing

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -3,8 +3,6 @@
 body {
     font-family: "Lato", sans-serif;
     background-color: white;
-    display: flex;
-    flex-direction: column;
     margin: 0;
 }
 .navbar_main-section {
@@ -13,36 +11,8 @@ body {
     display: flex;
     justify-content: center;
     background-color: #e9e5cd;
-}
-
-.main_section-container {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-}
-
-/* Laptap */
-
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-}
-
-/* Table */
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
-
-}
-
-/* Portrait and Landscape */
-@media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 3) {
-
+    align-items: center;
+    max-height: 45;
 }
 
 
@@ -51,43 +21,39 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .navbar_conatiner-logo-h1 {
-    margin-top: 5px;
-
-    padding-top: 13px;
     padding-bottom: 5px;
-}
-
-.navbar_conatiner-logo {
-    width: 50%;
-    display: flex;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: 0rem;
+    text-decoration: none;
 }
 
 .navbar_container-logo-light {
-    font-size: 3rem;
+    font-size: 1rem;
     color: #553b08;
-    font-weight: 200;
+    font-weight: 100;
+    text-decoration: none;
 }
 
 .navbar_container-logo-bold {
-    font-size: 3rem;
+    font-size: 1rem;
     color: #553b08;
-    font-weight: 400;
+    font-weight: 200;
+    text-decoration: none;
 }
 
 .navbar_buttons {
+    width: 300px;
+    padding: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 .form_container-demo-button {
-    margin-left: 20px !important;
-    padding-top: 2px !important;
+    margin-top: 40px;
+    margin-left: 100px;
+    height: 25px;
     background-color: #eacf86;
     border-radius: 3px;
     border: 1px solid #d6d0c4;
